--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -90,7 +90,7 @@ favicon: /img/favicon.png
 
 # Avatar (頭像)
 avatar:
-  img: https://i.loli.net/2021/02/24/5O1day2nriDzjSu.png
+  img: /img/dream/avatar.jpg
   effect: false
 
 # Disable all banner image
@@ -620,7 +620,7 @@ subtitle:
   sub:
 
 # Loading Animation (加載動畫)
-preloader: false
+preloader: true
 
 # aside (側邊欄)
 # --------------------------------------
