--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -7,7 +7,7 @@ menu:
   时间轴: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
   分类: /categories/ || fas fa-folder-open
-  娱乐||fa fa-heartbeat:
+  浅玩||fa fa-heartbeat:
     音乐: /music/ || fas fa-music
     照片: /Gallery/ || fas fa-images
     电影: /movies/ || fas fa-video
@@ -626,6 +626,7 @@ subtitle:
     - 不如诋毁他人
     - 今天你加班了吗
     - Did you work overtime today
+    - 浅学不算学
 
 # Loading Animation (加載動畫)
 preloader: true
@@ -729,7 +730,8 @@ darkmode:
   # autoChangeMode: 1  Following System Settings, if the system doesn't support dark mode, it will switch dark mode between 6 pm to 6 am
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
-  autoChangeMode: false
+#  autoChangeMode: false
+  autoChangeMode: 1
 
 # Don't modify the following settings unless you know how they work (非必要請不要修改 )
 # Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
