--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -4,15 +4,18 @@
 
 menu:
   首页: / || fas fa-home
-  时间轴: /archives/ || fas fa-archive
-  标签: /tags/ || fas fa-tags
-  分类: /categories/ || fas fa-folder-open
-  浅玩||fa fa-heartbeat:
+  找文章 || iconfont icon-zuixinwenzhang_huaban:
+    时间轴: /archives/ || fas fa-archive
+    标签: /tags/ || fas fa-tags
+    分类: /categories/ || fas fa-folder-open
+  生活 || iconfont icon-shenghuo:
     音乐: /music/ || fas fa-music
     照片: /Gallery/ || fas fa-images
     电影: /movies/ || fas fa-video
-  友链: /link/ || fas fa-link
-  关于: /about/ || fas fa-heart
+#    留言板: /messageboard/ || iconfont icon-liaotian-04
+    友人帐: /link/ || fas fa-link
+#  友链: /link/ || fas fa-link
+  关于笔者: /about/ || fas fa-heart
   # Home: / || fas fa-home
   # Archives: /archives/ || fas fa-archive
   # Tags: /tags/ || fas fa-tags
@@ -60,8 +63,8 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: false
-  preload: false
+  enable: true
+  preload: true
   CDN:
 
 # Math (數學)
