--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -4,11 +4,11 @@
 
 menu:
   首页: / || fas fa-home
-  找文章 || iconfont icon-zuixinwenzhang_huaban:
+  找文章 || fas fa-list:
     时间轴: /archives/ || fas fa-archive
     标签: /tags/ || fas fa-tags
     分类: /categories/ || fas fa-folder-open
-  生活 || iconfont icon-shenghuo:
+  生活 || fas fa-heartbeat:
     音乐: /music/ || fas fa-music
     照片: /Gallery/ || fas fa-images
     电影: /movies/ || fas fa-video
