--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aplayer": "^1.10.1",
     "hexo": "^5.0.0",
     "hexo-baidu-url-submit": "^0.0.6",
+    "hexo-butterfly-artitalk": "^1.0.4",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
