--- a/_config.yml
+++ b/_config.yml
@@ -169,3 +169,35 @@ search:
   field: post
 #  content: true
 #  template: ./search.xml
+douban:
+  user: 262710172
+  builtin: true
+  meta: true
+  book:
+    title: '那些年，我翻阅过的书'
+    quote: '思想和身体，总有一个在路上'
+    meta: true
+    comments: true
+    top_img: https://cccccc.png
+    aside: true
+    path: books
+    limit:
+  movie:
+    title: '那些年，我追过的电影'
+    quote: '过去、现在、和未来'
+    meta: true
+    comments: true
+    top_img: https://cccccc.png
+    aside: true
+    path: movies
+    limit:
+  game:
+    title: '那些年，我玩过的游戏'
+    quote: '还记得你曾经的游戏角色吗'
+    meta: true
+    comments: true
+    top_img: https://cccccc.png
+    aside: true
+    path: games
+    limit:
+  timeout: 10000
